Completed Project 3: Ready for submission